# neon-kernel

./: .gitignore  CMakeLists.txt  README.md  output.ppm
scripts/: build.py  config.py  run.py  shell_utils.py
src/: Config.cpp  Config.hpp  Image.cpp  Image.hpp  Main.cpp
src/kernels/: ImageProcessor.cu  ImageProcessor.hpp
src/utils/: Timer.cpp  Timer.hpp  UtilityFunctions.hpp
